# apexai

./: README.md  index.html  package.json  tsconfig.json
.same/: todos.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  state.rs
src/components/: ActionHistory.tsx  CommandPalette.tsx  ScreenPreview.tsx  StatusBar.tsx
src/stores/: automation.ts
